# BookSlice

./: .gitignore  CMakeLists.txt  Makefile  README.md  docker-compose.yml  run.sh
include/: chapters.hpp  core.hpp  extract.hpp  handle.hpp  pdf_handles.hpp  types.hpp  utils.hpp
include/core/: chapter_index.hpp  matcher.hpp  segmenter.hpp
include/db/: ingestor.hpp  mongo_conf.hpp  mongo_repo.hpp  record.hpp  repository.hpp
include/pdf/: metadata.hpp  outline.hpp  page_text.hpp  session.hpp
include/pipeline/: catalog.hpp  extract_chapters.hpp  section_writer.hpp  slice_toc.hpp  toc_lookup.hpp
knowledge-base/: pyproject.toml
knowledge-base/knowledge_base/: data_utils.py
knowledge-base/knowledge_base/domain/: __init__.py  concepts.py  corpus.py  section.py  types.py  utils.py
knowledge-base/knowledge_base/graph/: edges.py  kb.py
knowledge-base/knowledge_base/llm/: client.py  concepts.py  prereqs.py  utils.py
knowledge-base/knowledge_base/mongo_extraction/: __init__.py  extract.py
src/: chapters.cpp  core.cpp  extract.cpp  main.cpp  pdf_handles.cpp  utils.cpp
src/core/: chapter_index.cpp  chapter_indexer.cpp  matcher.cpp  segmenter.cpp
src/db/: ingestor.cpp  mongo_repo.cpp
src/pdf/: metadata.cpp  outline.cpp  page_text.cpp  session.cpp
src/pipeline/: catalog.cpp  extract_chapters.cpp  section_writer.cpp  slice_toc.cpp  toc_lookup.cpp
